--- a/Tutorial07/Tutorial07_2010.vcxproj.filters
+++ b/Tutorial07/Tutorial07_2010.vcxproj.filters
@@ -25,11 +25,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Tutorial07.fx">
-      <Filter>Shaders</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="Include\Resource.h">
       <Filter>Include</Filter>
     </ClInclude>
@@ -38,5 +33,10 @@
     <ResourceCompile Include="Tutorial07.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Tutorial07.fx">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
